--- a/css/media.css
+++ b/css/media.css
@@ -47,6 +47,7 @@ button:hover {
   background-color: var(--white);
   color: var(--red-dark);
 }
+
 .btn-dark {
   background-color: var(--red-dark);
   color: var(--white);
@@ -55,7 +56,9 @@ button:hover {
 header.hero {
   display: flex;
   align-items: center;
+  gap: 1rem;
   padding: 1rem;
+  text-align: justify;
 }
 
 header.hero h1,
@@ -64,15 +67,63 @@ p {
 }
 
 header.hero img {
-  width: 400px;
+  width: 100%;
+  min-width: 300px;
 }
 
+/* header.hero section {
+  flex: 1;
+} */
+
+header.hero .section-text {
+  flex: 1.9;
+}
+
+header.hero .section-img {
+  flex: 1;
+}
+
+main .card {
+  display: flex;
+  align-items: center;
+  border: 20px;
+  box-shadow: var(--shadow-light);
+  padding: 1rem;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+
+main .card article {
+  flex: 1;
+}
+
+main .card img {
+  width: 100%;
+}
+
+main .card:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+/*! MEDIA SORGULARI */
 @media screen and (max-width: 700px) {
   nav {
     flex-direction: column;
   }
   nav img {
     width: 250px;
+  }
+
+  header.hero {
+    flex-direction: column;
+  }
+
+  main .card {
+    flex-direction: column;
+  }
+
+  main .card:nth-child(even) {
+    flex-direction: column;
   }
 }
 
